# hoc-golem-zkstark

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  README.md  config.yaml  deploy.sh  entrypoint.sh  execute.sh  package.json  prove.sh  run.sh  verifierapp.yaml
scripts/: compile.sh  create-venv.sh  prove.sh  run.sh  verify.sh
src/: index.mjs  index.ts  lib.rs  main.cairo  main.json  main.rs  main_input.json  prove.rs  run.mjs  verify.mjs  verify.rs
web/: requestor.mjs
