[package]
name = "hoc-golem-zkstark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", tag = "v0.5.0" }
clap = { version = "4.5.1", features = ["derive"] }
lambdaworks-math ={ git = "https://github.com/lambdaclass/lambdaworks", tag = "v0.5.0", features = ["lambdaworks-serde-binary"] }
serde = { version = "1.0.196", features = ["derive"] }
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", tag = "v0.5.0", features = ["wasm"] }
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["full"] }
